# COMP6771-24T2

./: README.md
exercises-w1/: .gitignore  CMakeLists.txt  README.md
exercises-w1/solutions/1.1/: setdiff.cpp  setdiff.test.cpp
exercises-w1/solutions/1.2/: fib_vector.cpp
exercises-w1/solutions/1.3/: cat.cpp
exercises-w1/solutions/1.4/: sort3.cpp  sort3.test.cpp
exercises-w1/solutions/1.5/: answer.txt
exercises-w1/solutions/1.6/: answer.txt
exercises-w1/src/1.1/: setdiff.cpp  setdiff.h  setdiff.test.cpp
exercises-w1/src/1.2/: fib_vector.cpp  fib_vector.h  fib_vector.test.cpp
exercises-w1/src/1.4/: sort3.cpp  sort3.h  sort3.test.cpp
exercises-w2/: .gitignore  CMakeLists.txt  README.md
exercises-w2/solutions/: 2.1.txt  2.2.txt  2.3.txt
exercises-w2/solutions/2.4/: scale.cpp  scale.h  scale.test.cpp
exercises-w2/solutions/2.5/: mismatch.cpp  mismatch.test.cpp
exercises-w2/solutions/2.6/: permutation.cpp
exercises-w2/solutions/2.7/: assortment.cpp
exercises-w2/solutions/2.8/: mixer.cpp  mixer.h  mixer.test.cpp
exercises-w2/src/2.4/: scale.cpp  scale.h  scale.test.cpp
exercises-w2/src/2.5/: mismatch.cpp  mismatch.h  mismatch.test.cpp
exercises-w2/src/2.6/: permutation.cpp  permutation.h  permutation.test.cpp
exercises-w2/src/2.7/: assortment.cpp  assortment.h  assortment.test.cpp
exercises-w2/src/2.8/: mixer.cpp  mixer.h  mixer.test.cpp
exercises-w3/: CMakeLists.txt  README.md
exercises-w3/solutions/: 3.6.txt  3.7.txt
exercises-w3/solutions/3.1/: sort_descending.cpp  sort_descending.test.cpp
exercises-w3/solutions/3.2/: vsort.cpp
exercises-w3/solutions/3.3/: stats.cpp  stats.test.cpp
exercises-w3/solutions/3.4/: invert.cpp
exercises-w3/solutions/3.5/: microbenchmark.cpp  microbenchmark.test.cpp
exercises-w3/src/3.1/: sort_descending.cpp  sort_descending.h  sort_descending.test.cpp
exercises-w3/src/3.2/: vsort.cpp  vsort.h  vsort.test.cpp
exercises-w3/src/3.3/: stats.cpp  stats.h
exercises-w3/src/3.4/: invert.cpp  invert.h  invert.test.cpp
exercises-w3/src/3.5/: microbenchmark.cpp  microbenchmark.h  microbenchmark.test.cpp
exercises-w4/: CMakeLists.txt  README.md
exercises-w4/solutions/: 4.2.txt  4.3.txt  4.4.txt
exercises-w4/solutions/4.5/: namespaced.h
exercises-w4/solutions/4.6/: ferrari.h  ferrari.test.cpp
exercises-w4/solutions/4.7/: rational.cpp  rational.h  rational.test.cpp
exercises-w4/solutions/4.8/: vec3.h  vec3.test.cpp
exercises-w4/src/4.2/: q4_2.cpp
exercises-w4/src/4.5/: namespaced.cpp  namespaced.h
exercises-w4/src/4.6/: ferrari.cpp  ferrari.h  ferrari.test.cpp
exercises-w4/src/4.7/: rational.cpp  rational.h  rational.test.cpp
exercises-w4/src/4.8/: vec3.h  vec3.test.cpp
exercises-w5/: CMakeLists.txt  README.md
exercises-w5/solutions/: 5.1.txt
exercises-w5/solutions/5.4/: book.h  book.test.cpp
exercises-w5/solutions/5.5/: rational_oo.h  rational_oo.test.cpp
exercises-w5/solutions/5.6/: rope.h
exercises-w5/solutions/5.7/: zip.h
exercises-w5/src/5.4/: book.cpp  book.h
exercises-w5/src/5.5/: rational_oo.cpp  rational_oo.h  rational_oo.test.cpp
exercises-w5/src/5.6/: rope.cpp  rope.h  rope_user.cpp
exercises-w5/src/5.7/: zip.cpp  zip.h  zipper.cpp
exercises-w7/: CMakeLists.txt  README.md
exercises-w7/solutions/7.3/: rethrow.cpp
exercises-w7/solutions/7.4/: matrix.h  matrix.test.cpp
exercises-w7/src/7.3/: rethrow.cpp  rethrow.h
exercises-w7/src/7.4/: matrix.cpp  matrix.h
exercises-w8/: CMakeLists.txt  README.md
exercises-w8/solutions/: 8.1.txt  8.2.txt
exercises-w8/solutions/8.3/: marking.txt  order.h
exercises-w8/solutions/8.4/: expr.h
exercises-w8/src/8.3/: order.h  ordered.cpp
exercises-w8/src/8.4/: expr.cpp  expr.h  expression.cpp
exercises-w9/: CMakeLists.txt  README.md
exercises-w9/solutions/: 9.1.txt
exercises-w9/solutions/9.3/: results.txt
exercises-w9/src/9.3/: ring.cpp  ring.h
sample-exam/: CMakeLists.txt
sample-exam/solution/: q1.h
sample-exam/src/q1/: q1.cpp  q1.h  q1.test.cpp
